<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|fill_vertical"
        android:background="@color/colorBlack"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans_bold"
            android:gravity="center"
            android:text="Ezyschooling"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Schooling Made Easy"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/intro_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="40dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans_bold"
                    android:gravity="center"
                    android:text="About The Company"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/aboutTheCompany_text"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:paddingTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    android:scrollbarAlwaysDrawVerticalTrack="true"

                    >

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:orientation="vertical">

                       <ScrollView
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:paddingBottom="10dp">
                           <LinearLayout
                               android:layout_width="match_parent"
                               android:layout_height="match_parent"
                               android:orientation="vertical">
                               <TextView
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:gravity="center"
                                   android:textSize="15sp"
                                   android:paddingBottom="8dp"
                                   android:paddingTop="8dp"
                                   android:text="Admission"/>
                               <TextView
                                   android:layout_width="match_parent"
                                   android:layout_height="match_parent"
                                   android:paddingLeft="8dp"
                                   android:paddingRight="8dp"
                                   android:text="@string/admission_text"/>
                               <TextView
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:gravity="center"
                                   android:textSize="15sp"
                                   android:paddingTop="8dp"
                                   android:paddingBottom="8dp"
                                   android:text="Parenting"/>
                               <TextView
                                   android:layout_width="match_parent"
                                   android:layout_height="match_parent"
                                   android:paddingLeft="8dp"
                                   android:paddingRight="8dp"
                                   android:text="@string/parenting_text"/>
                               <TextView
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:gravity="center"
                                   android:paddingTop="8dp"
                                   android:paddingBottom="8dp"
                                   android:textSize="15sp"
                                   android:text="News"/>
                               <TextView
                                   android:layout_width="match_parent"
                                   android:layout_height="match_parent"
                                   android:paddingLeft="8dp"
                                   android:paddingRight="8dp"
                                   android:text="@string/news_text"/>

                           </LinearLayout>
                       </ScrollView>
                   </LinearLayout>
                </ScrollView>

            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</LinearLayout>
